src/components/styles/main.css
@import url("minireset.css");
@import url("prism-one-light.css");
@import url('tocbot.css');

* {
  text-decoration: none;
  color: inherit;
}

body {
  font-size: 1rem;
  color: #333333;
}

/* ref: https://www.modularscale.com/?1&em&1.25 */
h1 { 
  font-size: 2.441em; 
  font-weight: 700;
}
h2 { 
  font-size: 1.953em; 
  font-weight: 700;
}
h3 { 
  font-size: 1.563em; 
  font-weight: 700;
}
h4 { 
  font-size: 1.25em;  
  font-weight: 700;
}
p, li { 
  font-size: 1em;
  font-weight: 400;
  line-height: 1.8em;
}


.container {
  margin: auto;
  width: 100%;
  max-width: 45rem;
  font-family: sans-serif;
}

.site-title {
  font-size: 1.5rem;
  font-weight: 400;
  margin: 2.5rem 0 1.5rem 0;
}

.nav {
  font-weight: 400;
  display: flex;
}

.nav-links {
  display: flex;
}

.nav a{
  
  color: #666666;
  opacity: 0.8;
  transition: 0.25s;
  cursor: pointer;
}

.nav a:hover {
  opacity: 1;
}

.nav-links a {
  padding-right: 2rem;
}

.external-links {
  margin-left: auto;
  display: flex
}

.external-links a {
  padding-left: 2rem;
}

.content {
  margin-top: 4rem;
}

.content .post-item {
  margin: 2rem 0;
  display: flex;
  align-items: center;
  color: #333333;
  opacity: 0.8;
  transition: 0.2s;
}

.content .post-item:hover {
  opacity: 1;
}

.content .post-item-thumbnail {
  width: 7rem;
  height: 7rem;
  background: #eeeeee;
}

.content .post-item-desc {
  height: 7rem;
  margin-left: 1.5rem;
  display: flex;
  flex-direction: column;
}

.content .post-item-title {
  margin-top: 0;
  font-size: 1.5em;
  font-weight: 400;
}

.content .post-item-sub-title {
  margin-top: 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.2em;
}

.content .post-item-meta {
  font-size: 1em;
  line-height: 1em;
  margin: auto 0 0 0;
}

.content .page-title, .post-title {
  margin-top: 1em;
}

.content .post-sub-title {
  margin-top: 1rem;
  color: #666666;
  font-weight: 400;
}

.content .post-meta {
  display: block;
  margin-top: 0.5rem;
  color: #666666;
}

.content .post-content {
  margin: 3rem 0 5rem 0;
}

.content h2, h3, h4 {
  margin-top: 2em;
}

.content p {
  margin: 1em 0;
}

.content p a {
  text-decoration: underline;
}

.post-content > ul {
  margin: 1em 0;
}

.content ul li {
  list-style: outside;
  margin-left: 1em;
}

.content ul li a {
  text-decoration: underline;
}

.content .gatsby-resp-image-wrapper {
  margin: 2em 0;
}

.content .gatsby-resp-image-wrapper + em {
  display: block;
  margin: -1.5em auto 2em auto;
  max-width: 90%;
  text-align: center;
  font-size: 0.9em;
  font-style: normal;
  line-height: 1.5em;
  color: #999999;
}

.content blockquote {
  /*background: #f9f9f9;*/
  background: #f6f6f6;
  border-left: 4px solid #e6e6e6;
  padding: 1rem;
  color: #666666;
}

.content blockquote code {
  color: #666666;
}

.content blockquote p {
  margin: 0;
}

.content .mermaid {
  width: fit-content;
  margin: 0 auto;
}

.footer .copy-right{
  margin: 6em 0 3em 0;
  font-size: 1em;
  text-align: right;
  color: #666666
}

@media screen and (max-width: 800px) {
  body {
    font-size: 0.85rem;
  }

  .container {
    padding: 0 1rem;
  }

  .nav-links a {
    padding-right: 1.5rem;
  }

  .external-links a {
    padding-left: 1.5rem;
  }

  .content .post-item-thumbnail {
    display: none !important;
  }

  .content .post-item-desc {
    margin-left: 0;
  }
}

